# LogSnuffer

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  justfile  logs.db  logs.db-journal
db/: logs.db  snuff.db
snuff/: Chart.yaml  values.yaml
snuff/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml  sqlite-pvc.yaml
snuff/templates/tests/: test-connection.yaml
src/: lib.rs  main.rs  planner.rs  utils.rs
src/agents/: agent_call.rs  mod.rs
src/background/: worker.rs
src/database/: init_db.rs
src/github/: client.rs  issues.rs  mod.rs  similarity.rs
src/log_generator/: client.rs  log_generator.rs  log_methods.rs  mod.rs
src/redis_metrics/: metrics.rs
src/server/: handlers.rs  mod.rs  state.rs  webhook.rs
src/state/: agent_context.rs  agent_state.rs  mod.rs
src/ticket_tool/: agent_state.rs  analysis_tool.rs  error_tool.rs  fetchlogs_tool.rs  mod.rs  session_tool.rs  ticket.rs  warning_tool.rs
src/types/: data_types.rs
