[package]
name = "logsnuffer"
version = "0.1.0"
edition = "2024"

[dependencies]
async-rusqlite = "0.5.0"
chrono = { version = "0.4.43", features = ["serde"] }
rand = "0.10.0"
redis = { version = "1.0.3", features = ["tokio-comp"] }
rig-core = "0.30.0"
seahash = "4.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
