[package]
name = "logsnuffer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "generator"
path = "src/bin/log_generator.rs"

[dependencies]
async-rusqlite = "0.5.0"
axum = "0.8.8"
chrono = { version = "0.4.43", features = ["serde"] }
openssl-sys = "0.9.111"
rand = "0.10.0"
redis = { version = "1.0.3", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.13.2", features = ["json"] }
rig-core = "0.30.0"
seahash = "4.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
