[package]
name = "logsnuffer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "generator"
path = "src/bin/log_generator.rs"

[dependencies.rustls]
version = "0.23.36"
features = ["ring"]

[dependencies]
anyhow = "1.0.102"
async-rusqlite = "0.5.0"
axum = "0.8.8"
chrono = { version = "0.4.43", features = ["serde"] }
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
octocrab = "0.49.5"
openssl-sys = "0.9.111"
rand = "0.10.0"
redis = { version = "1.0.3", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.13.2",features = ["json"] }
rig-core = "0.30.0"
schemars = "1.2.1"
seahash = "4.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
snafu = "0.8.9"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.21.0", features = ["serde", "v4"] }
